Working on fixing the screen a little bit.